Update to prep for website visitors

--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
 | About Me |
 +----------+
         </div>
-        <p>Hello! I'm Nicholas Leland, a Mechanical Engineer based in Warwick, Rhode Island. I'm passionate about Machine Learning, currently focusing on vision.</p>
+        <p>Hello! I'm Nicholas Leland, a Mechanical Engineer based in Warwick, Rhode Island. While I enjoy mechanical engineering concepts, I have found my interests pivoting towards software, specifically machine learning, and how these concepts can be applied to so many different fields.  I am currently exploring the vision domain of deep learning, but I am also very interested in traditional ml applications as well!</p>
+        <a href="resume.html">Current Resume</a>
     </section>
 
 
@@ -88,7 +89,9 @@
         </div>
         <ul>
             <li><a href="https://github.com/nick-leland/DistortionML">DistortionML</a> - A Machine Learning model that is capable of detecting and then reversing transformations that are applied to images.</li>
+            <p><font size="-1">The goal of this project was to dive into the world of computer vision.  This project resulted in not just model training, but more importantly learning and understanding how to properly build datasets for specialized projects.  </font></p>
             <li><a href="https://github.com/nick-leland/rd2l_pred">RD2L Price Prediction</a> - A tool used to predict the player prices for the RD2L drafting process.</li>
+            <p><font size="-1">This project uses machine learning to predict data off of tabular information that is gathered through various web API's.  Eventually, my goal is to expand this data collection to go from the traditional player information into more intensive hero data to allow for hero/ban suggestions based on RD2L team matchups.</font></p>
         </ul>
     </section>
 
@@ -131,6 +134,7 @@
         <p>Connect with me:</p>
         <a href="https://github.com/nick-leland">GitHub</a> |
         <a href="https://x.com/Chaotic5555">Twitter</a> |
+        <a href="https://www.linkedin.com/in/nicholasleland?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app">LinkedIn</a> |
         <a href="https://www.kaggle.com/nickleland">Kaggle</a> |
         <a href="nicholasrleland@gmail.com">Email</a>
     </footer>
