--- a/index.html
+++ b/index.html
@@ -40,49 +40,16 @@ Leland</a></td>
 <nav id="TOC" role="doc-toc">
 <h2 id="toc-title">Contents</h2>
 <ul class="incremental">
+<li><a href="#projects" id="toc-projects">Projects</a></li>
 <li><a href="#introduction" id="toc-introduction">About Me</a></li>
 <li><a href="#hire" id="toc-hire">Resume</a></li>
-<li><a href="#projects" id="toc-projects">Projects</a></li>
 <li><a href="#thanks" id="toc-thanks">Thanks</a></li>
 </ul>
 </nav>
 
-
-<h2 id="introduction">About Me</h2>
-<!-- Use <em> for italics and use <p> to setup the paragraphs -->
-<p>Hello! This is my personal corner of the internet where I will chat about different aspects of my life, things I find interesting, and my current projects!  I was fascinated by Mechanical Systems and pursued a degree in Mechanical Engineering.  While exploring Computational Fluid Dynamics (CFD) and Finite Element Analysis, I was introduced to Linux through OpenFOAM, an open source software to perform CFD analysis (typically gatekept behind very expensive software) but requiring a Unix based operating system to run.  After learning the ropes behind Linux, I started to grow curious to the world of software, where my only real experience previously was on small Robotic systems throughout my High School Robotics Club.     
-</p>
-<p>The initial Deep Dive into software was a very interesting experience, I learned initially through "<a href="https://runestone.academy/ns/books/published/thinkcspy/index.html">How to Think like a Computer Scientist</a>" which did a phenomenal job of sparking my curiosity behind the potential applications for the programming fundamentals that I learned.  If anyone that I talk to today wants to learn or understand programming, this is my goto suggestion.  
-</p>
-<p>
-While I continued on my journey to learn about software, I quickly ran into the typical <em>x machine learning discourse </em> which sparked my interest.  I found the <a href="https://roadmap.sh/ai-data-scientist">AI Data Scientist Roadmap</a> through roadmap.sh which I began to follow.  I have since <em> just about </em> completed this roadmap and continue to work on personal projects (as well as trying to break into the field)
-</p>
-
-<pre>
-           __..--''``---....___   _..._    __
- /// //_.-'    .-/";  `        ``<._  ``.''_ `. / // /
-///_.-' _..--.'_    \                    `( ) ) // //
-/ (_..-' // (< _     ;_..__               ; `' / ///
- / // // //  `-._,_)' // / ``--...____..-' /// / //
-</pre>
-
-<h2 id="hire">Resume</h2>
-<p> If you want to check out some more information about me, please feel free to take a look at my resume.  You can always reach out and chat (links at the bottom) and discuss if I'd be the right fit to help on your application. </p>
-
-<a href="documents/nicholas_leland_resume.pdf" target="_blank">Download PDF</a></p>
-
-<pre>
-(:`--..___...-''``-._             |`._
-  ```--...--.      . `-..__      .`/ _\  
-            `\     '       ```--`.    />
-            : :   :               `:`-'
-             `.:.  `.._--...___     ``--...__      
-                ``--..,)       ```----....__,) 
-</pre>
-
 <h2 id="projects">Projects</h2>
 
-<p> Here is a list of my projects. This will be ever expanding, I enjoy spending my time building useless things :D
+<p> Here are some things that i've built! :D
 </p>
 
 <details>
@@ -139,6 +106,25 @@ Supra Wing Project
 </details>
 
 <pre>
+           __..--''``---....___   _..._    __
+ /// //_.-'    .-/";  `        ``<._  ``.''_ `. / // /
+///_.-' _..--.'_    \                    `( ) ) // //
+/ (_..-' // (< _     ;_..__               ; `' / ///
+ / // // //  `-._,_)' // / ``--...____..-' /// / //
+</pre>
+
+<h2 id="introduction">About Me</h2>
+<!-- Use <em> for italics and use <p> to setup the paragraphs -->
+<p>Hello! This is my personal corner of the internet where I will chat about different aspects of my life, things I find interesting, and my current projects!  I was fascinated by Mechanical Systems and pursued a degree in Mechanical Engineering.  While exploring Computational Fluid Dynamics (CFD) and Finite Element Analysis, I was introduced to Linux through OpenFOAM, an open source software to perform CFD analysis (typically gatekept behind very expensive software) but requiring a Unix based operating system to run.  After learning the ropes behind Linux, I started to grow curious to the world of software, where my only real experience previously was on small Robotic systems throughout my High School Robotics Club.     
+</p>
+<p>The initial Deep Dive into software was a very interesting experience, I learned initially through "<a href="https://runestone.academy/ns/books/published/thinkcspy/index.html">How to Think like a Computer Scientist</a>" which did a phenomenal job of sparking my curiosity behind the potential applications for the programming fundamentals that I learned.  If anyone that I talk to today wants to learn or understand programming, this is my goto suggestion.  
+</p>
+<p>
+While I continued on my journey to learn about software, I quickly ran into the typical <em>x machine learning discourse </em> which sparked my interest.  I found the <a href="https://roadmap.sh/ai-data-scientist">AI Data Scientist Roadmap</a> through roadmap.sh which I began to follow.  I have since <em> just about </em> completed this roadmap and continue to work on personal projects (as well as trying to break into the field)
+</p>
+
+
+<pre>
         _..---...,""-._     ,/}/)
      .''        ,      ``..'(/-<
     /   _      {      )         \
@@ -147,6 +133,20 @@ Supra Wing Project
 (  <\_-) )'-.____...\  `._   //-'
  `. `-' /-._)))      `-._)))
    `...'         
+</pre>
+
+<h2 id="hire">Resume</h2>
+<p> If you want to check out some more information about me, please feel free to take a look at my resume.  You can always reach out and chat (links at the bottom) and discuss if I'd be the right fit to help on your application. </p>
+
+<a href="documents/nicholas_leland_resume.pdf" target="_blank">Download PDF</a></p>
+
+<pre>
+(:`--..___...-''``-._             |`._
+  ```--...--.      . `-..__      .`/ _\  
+            `\     '       ```--`.    />
+            : :   :               `:`-'
+             `.:.  `.._--...___     ``--...__      
+                ``--..,)       ```----....__,) 
 </pre>
 
 <h2 id="thanks">Thanks</h2>
